added weather icons based on weather status

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
 .App {
   text-align: center;
   height: 100vh;
-  background-image: linear-gradient(to right, #2C74B3, #82AAE3);
+  /* background-image: linear-gradient(to right, #2C74B3, #82AAE3); */
+  background: linear-gradient(-45deg, #2C74B3, #82AAE3, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
