--- a/src/Components/CurrentLoc.css
+++ b/src/Components/CurrentLoc.css
@@ -7,9 +7,14 @@
   font-weight: 300;
   color: #fff;
 }
+.CurrentLocMainContainer__date {
+  font-family: Poppins;
+  font-size: 15px;
+  font-weight: 300;
+  color: #fff;
+}
 .CurrentLocMainContainer__rainy {
   width: 173px;
-  margin-top: 30px;
 }
 .CurrentLocMainContainer__temp {
   color: #fff;
