--- a/src/Components/CurrentLoc.scss
+++ b/src/Components/CurrentLoc.scss
@@ -8,9 +8,15 @@
         color: #fff;
     }
 
+    &__date {
+        font-family: Poppins;
+        font-size: 15px;
+        font-weight: 300;
+        color: #fff;
+    }
+
     &__rainy {
         width: 173px;
-        margin-top: 30px;
     }
 
     &__temp {
