--- a/src/Components/Future.scss
+++ b/src/Components/Future.scss
@@ -10,4 +10,16 @@
     &__day {
         margin-right: 30px;
     }
+
+    &__loading {
+        width: 130px;
+        margin: 0 auto;
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        top: 50%;
+        text-align: center;
+    }
 }
