--- a/src/Components/TemperatureUnitSwitch/TemperatureUnitSwitch.css
+++ b/src/Components/TemperatureUnitSwitch/TemperatureUnitSwitch.css
@@ -44,10 +44,9 @@
 }
 .TemperatureUnitSwitch .button {
   position: relative;
-  top: 60px;
   width: 74px;
   height: 36px;
-  margin: -20px auto 0 auto;
+  margin: 0px 0px 0px auto;
   overflow: hidden;
 }
 .TemperatureUnitSwitch .button.r,
