--- a/src/Components/TemperatureUnitSwitch/TemperatureUnitSwitch.scss
+++ b/src/Components/TemperatureUnitSwitch/TemperatureUnitSwitch.scss
@@ -48,10 +48,9 @@
 
     .button {
         position: relative;
-        top: 60px;
         width: 74px;
         height: 36px;
-        margin: -20px auto 0 auto;
+        margin: 0px 0px 0px auto;
         overflow: hidden;
     }
 
