--- a/src/Components/CurrentLoc.scss
+++ b/src/Components/CurrentLoc.scss
@@ -1,11 +1,19 @@
 .CurrentLocMainContainer {
     padding-top: 60px;
 
+    @media screen and (max-width: 576px) {
+        padding-top: 0px;
+    }
+
     &__city {
         font-family: Poppins;
         font-size: 50px;
         font-weight: 300;
         color: #fff;
+
+        @media screen and (max-width: 390px) {
+            font-size: 40px;
+        }
     }
 
     &__date {
@@ -33,6 +41,15 @@
         font-size: 30px;
         margin-top: 20px;
         font-weight: 200;
+
+        @media screen and (max-width: 700px) {
+            font-size: 25px;
+        }
+
+        @media screen and (max-width: 390px) {
+            font-size: 20px;
+        }
+
     }
 
     &__tempRange {
