--- a/src/Components/Future.css
+++ b/src/Components/Future.css
@@ -7,6 +7,16 @@
   padding-top: 15px;
   color: #fff;
 }
+@media screen and (max-width: 1030px) {
+  .futureWeatherContainer {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 390px) {
+  .futureWeatherContainer {
+    margin: 15px auto;
+  }
+}
 .futureWeatherContainer__day {
   margin-right: 30px;
 }
