--- a/src/Components/MainContainer.scss
+++ b/src/Components/MainContainer.scss
@@ -1,5 +1,11 @@
 .MainContainer {
 
+    @media screen and (max-width: 576px) {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
     &__top {
         display: flex;
         flex-direction: row;
@@ -8,5 +14,20 @@
         position: relative;
         top: 30px;
         padding: 0px 70px;
+
+        &__input {
+            input {
+                padding: 0.6rem 0.75rem;
+            }
+        }
+
+        @media screen and (max-width: 576px) {
+            flex-direction: column-reverse;
+            align-items: center;
+            top: 0;
+            height: 100%;
+            justify-content: space-evenly;
+        }
     }
+
 }
